--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,8 @@ target-version = ["py310", "py311", "py312"]
 [tool.ruff]
 line-length = 88
 target-version = "py310"
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "B"]
 ignore = ["E203", "E501"]
 
